    * Fix return value in client spooler code.


o   Krishna Ganugapati <krishnag@centeris.com>
    * Use the subtree delete ldap control when running 'net ads 
      leave'.


o   Volker Lendecke <vl@samba.org>
    * Fix some uninitialized variable warnings.
    * Fix winbind_lookup_name for the local domain, 


o   Derrell Lipman <derrell@samba.org>
    * libsmbclient memory leak fixes.


o   Lars Müller <lmuelle@samba.org>
    * Ensure setmntent() returns with != NULL in the disk_quotas() 
      Linux version.
    * Add configure switch to disable libmsrpc build.
    * Add a soname to libmsrpc.


o   John Terpstra <jht@samba.org>
    * Add 'net idmap' usage help text.



Changes since 3.0.20b
---------------------

o   Jeremy Allison <jra@samba.org>
    * BUG 1828: Fixed SPNEGO issues with PocketPC clients.
    * Added 'map readonly' parameter.
    * BUG 3166: Fix crash in libsmbclient if the $HOME environment is
      not defined.
    * Maintain schannel client session keys in volatile 
      $(privatedir)/schannel_store.tdb.
    * BUG 2769: Ensure we mangle filenames ending in a space
    * Catch corner case of renaming a symlinked directory into 
      itself
    * Ensure that smb.conf requests for hidden files are honored, 
      even when DOS attributes are stored in EA's
    * Add new auth method "auth_script" for calling an external 
      program
    * BUG 2152: Fix for mangled filenames when the client does 
      support long filenames
    * Rewritten implementation of client and server DCE/RPC infrastructure 
    * BUG 3192: Adds a "dfree cache time" parameter.
    * Fix acl evaluation bug found by Marc Cousin.  Only evaluate 
      the S_IWGRP mask in the absence of a POSIX ACL.
    * Remove use of 'long long' in libsmbclient code.
    * Ensure the new canonicalize_servicename() in name/snum hash 
      is multi-byte safe.
    * BUG 2922: Integration of FreeBSD AIO patches from Timur 
      Bakeyev.