@@ -89,6 +89,11 @@ o   Derrell Lipman <derrell@samba.org>
     * libsmbclient memory leak fixes.
 
 
+o   Brian Moran <bmoran@centeris.com>
+    * Fix segv in eventlogadm when not event logs are listed in 
+      smb.conf.
+
+
 o   Lars Müller <lmuelle@samba.org>
     * Ensure setmntent() returns with != NULL in the disk_quotas() 
       Linux version.
